--- a/prediabetes.html
+++ b/prediabetes.html
@@ -10,13 +10,12 @@
 
 <body>
     <div class="chat-container">
-        <h1>Dr. Genie - Your Health Assistant</h1>
-        <div id="chat-box">
-            <div id="messages"></div>
+        <div class="chat-box" id="chatBox">
+            <!-- Chat messages will appear here -->
         </div>
-        <div class="input-container">
-            <input type="text" id="user-input" placeholder="Ask Dr. Genie about prediabetes...">
-            <button id="send-btn">Send</button>
+        <div class="chat-input">
+            <input type="text" id="userMessage" placeholder="Ask Dr. Genie...">
+            <button id="sendMessage">Send</button>
         </div>
     </div>
 
